--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,17 +33,17 @@ usegmp = ["rust-gmp"]
 gmp_nonsec = []
 
 [dependencies]
-num-traits = "0.1"
-rand = "0.5"
-rayon = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
-ramp = { version="0.5", optional=true }
-framp = { version="0.3", optional=true }
-rust-gmp = { version="0.5", optional=true }
-ring = { version="0.13", optional=true }
+num-traits = "^0.2"
+rand = "0.8.5"
+rayon = "1.5.3"
+serde = "^1.0"
+serde_derive = "^1.0"
+ramp = { version="0.7.0", optional=true }
+framp = { version="0.3.7", optional=true }
+rust-gmp = { version="0.5.0", optional=true }
+ring = { version="0.16.20", optional=true }
 
-bit-vec = "0.5"
+bit-vec = "0.6.3"
 
 [dev-dependencies]
 bencher = "0.1"
